--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "openai",
     "semanticscholar",
+    "SQLAlchemy",
     "requests",
     "agno"
 ]
