--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -2,9 +2,10 @@ name: Scheduled Paper Query
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # Runs every day at 08:00 UTC
+    - cron: "0 8 * * *" # Runs every day at 08:00 UTC
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   run-paper-query:
     runs-on: ubuntu-latest
@@ -14,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Install dependencies
         run: |
           pip install -e .
@@ -23,11 +24,12 @@ jobs:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
           SEMANTICSCHOLAR_API_KEY: ${{ secrets.SEMANTICSCHOLAR_API_KEY }}
         run: |
-          python daily.py 
+          python daily.py
       - name: Commit daily report
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Webioinfo01/AweAgent.git
           git add daily_report/*.md
           git commit -m "chore: add daily report for $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push 
+          git push
