--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -2,7 +2,7 @@ name: Scheduled Paper Query
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0 1 * * *"
   workflow_dispatch:
 permissions:
   contents: write
